not sure on the changes

--- a/ICT4007/Week8_class.ipynb
+++ b/ICT4007/Week8_class.ipynb
@@ -52,15 +52,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (657410471.py, line 12)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn [49], line 12\u001b[1;36m\u001b[0m\n\u001b[1;33m    i++\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "birthYear =  2000\n",
+      "age =  22\n",
+      "young adult\n",
+      "birthYear =  2010\n",
+      "age =  12\n",
+      "child\n",
+      "birthYear =  1990\n",
+      "age =  32\n",
+      "adult\n",
+      "birthYear =  1985\n",
+      "age =  37\n",
+      "adult\n",
+      "birthYear =  1945\n",
+      "age =  77\n",
+      "senior age\n"
      ]
     }
    ],
